--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "engines": {
+    "node": ">=18.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
